Undo removing tests from files

--- a/types/ptomasroos__react-native-multi-slider/tsconfig.json
+++ b/types/ptomasroos__react-native-multi-slider/tsconfig.json
@@ -21,6 +21,7 @@
         }
     },
     "files": [
-        "index.d.ts"
+        "index.d.ts",
+        "ptomasroos__react-native-multi-slider-tests.tsx"
     ]
 }
