Refactor by remove unused package and compilerOptions fields order.

--- a/types/connect-mongodb-session/tsconfig.json
+++ b/types/connect-mongodb-session/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
+        "baseUrl": "../",
         "lib": [
             "es6"
         ],
         "module": "commonjs",
-        "baseUrl": "../",
+        "noEmit": true,
         "typeRoots": [
             "../"
         ],
