Fix all lint complain

--- a/types/connect-mongodb-session/tsconfig.json
+++ b/types/connect-mongodb-session/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
         "baseUrl": "../",
+        "forceConsistentCasingInFileNames": true,
         "lib": [
             "es6"
         ],
         "module": "commonjs",
         "noEmit": true,
+        "noImplicitAny": true,
+        "noImplicitThis": true,
+        "strictNullChecks": false,
+        "strictFunctionTypes": true,
         "typeRoots": [
             "../"
         ],
