--- a/types/moment-business-days/package.json
+++ b/types/moment-business-days/package.json
@@ -1,7 +1,6 @@
 {
     "private": true,
     "dependencies": {
-        "moment": ">=2.14.0",
-        "moment-business-days": "^1.0.6"
+        "moment": ">=2.18.1"
     }
 }
