--- a/types/react-gateway/tsconfig.json
+++ b/types/react-gateway/tsconfig.json
@@ -19,6 +19,11 @@
     },
     "files": [
         "index.d.ts",
+        "lib/Gateway.d.ts",
+        "lib/GatewayDest.d.ts",
+        "lib/GatewayProvider.d.ts",
+        "lib/GatewayRegistry.d.ts",
+        "lib/index.d.ts",
         "react-gateway-tests.tsx"
     ]
 }
