--- a/types/millisecond/tsconfig.json
+++ b/types/millisecond/tsconfig.json
@@ -1,14 +1,23 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "lib": [
+            "es2015"
+        ],
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": true,
+        "strictFunctionTypes": true,
         "baseUrl": "../",
-        "typeRoots": ["../"],
+        "typeRoots": [
+            "../"
+        ],
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
-    "files": ["index.d.ts", "millisecond-tests.ts"]
+    "files": [
+        "index.d.ts",
+        "millisecond-tests.ts"
+    ]
 }
