--- a/types/antlr4/tsconfig.json
+++ b/types/antlr4/tsconfig.json
@@ -17,9 +17,24 @@
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": [
-        "*.ts",
-        "error/*.ts",
-        "tree/*.ts"
+    "files": [
+        "error/ErrorListener.d.ts",
+        "error/Errors.d.ts",
+        "error/ErrorStrategy.d.ts",
+        "error/index.d.ts",
+        "tree/Tree.d.ts",
+        "antlr4-test.ts",
+        "BufferedTokenStream.d.ts",
+        "c-parser.ts",
+        "CommonTokenStream.d.ts",
+        "index.d.ts",
+        "InputStream.d.ts",
+        "IntervalSet.d.ts",
+        "Lexer.d.ts",
+        "Parser.d.ts",
+        "ParserRuleContext.d.ts",
+        "Recognizer.d.ts",
+        "RuleContext.d.ts",
+        "Token.d.ts"
     ]
 }
