Remove antlr4-test.ts to antlr4-tests.ts, for the antlr4 types

--- a/types/antlr4/tsconfig.json
+++ b/types/antlr4/tsconfig.json
@@ -23,7 +23,7 @@
         "error/ErrorStrategy.d.ts",
         "error/index.d.ts",
         "tree/Tree.d.ts",
-        "antlr4-test.ts",
+        "antlr4-tests.ts",
         "BufferedTokenStream.d.ts",
         "c-parser.ts",
         "CommonTokenStream.d.ts",
