--- a/types/promise-ftp-common/tsconfig.json
+++ b/types/promise-ftp-common/tsconfig.json
@@ -9,7 +9,8 @@
         "typeRoots": ["../"],
         "types": [],
         "noEmit": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "strictFunctionTypes": true
     },
     "files": ["index.d.ts", "promise-ftp-common-tests.ts"]
 }
