--- a/types/yoga-layout/tsconfig.json
+++ b/types/yoga-layout/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strictFunctionTypes": true,
         "module": "commonjs",
         "lib": [
             "es6"
