update code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4126,6 +4126,7 @@
 /types/timer-machine/                           @dolanmiu
 /types/timezone-js/                             @bonnici
 /types/tinder/                                  @pingec
+/types/tinajs__tina/                            @Jimexist
 /types/tiny-slider-react/                       @screendriver
 /types/tinycolor2/                              @M-Zuber @geertjansen @nvh
 /types/tinycopy/                                @vvatanabe
