[webpack-serve] add the correct path mapping for the v1

--- a/types/webpack-serve/v1/tsconfig.json
+++ b/types/webpack-serve/v1/tsconfig.json
@@ -12,6 +12,9 @@
     "typeRoots": [
       "../../"
     ],
+    "paths": {
+        "webpack-serve": ["webpack-serve/v1"]
+    },
     "types": [],
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
