feat(react): add library managed attributes and better prop types

--- a/types/react/tsconfig.json
+++ b/types/react/tsconfig.json
@@ -4,6 +4,7 @@
         "test/index.ts",
         "test/tsx.tsx",
         "test/cssProperties.tsx"
+        // "test/library-managed-attributes.tsx"
     ],
     "compilerOptions": {
         "module": "commonjs",
