--- a/types/gestalt/tsconfig.json
+++ b/types/gestalt/tsconfig.json
@@ -10,7 +10,8 @@
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true,
-        "jsx": "react"
+        "jsx": "react",
+        "strictFunctionTypes": true
     },
     "files": ["index.d.ts", "gestalt-tests.tsx"]
 }
