Updated in accordance with linter

--- a/types/websocket-async/tsconfig.json
+++ b/types/websocket-async/tsconfig.json
@@ -16,7 +16,8 @@
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "strictFunctionTypes": false
     },
     "files": [
         "index.d.ts",
