--- a/types/websocket-async/tsconfig.json
+++ b/types/websocket-async/tsconfig.json
@@ -17,7 +17,7 @@
         "noEmit": true,
         "forceConsistentCasingInFileNames": true,
         "esModuleInterop": true,
-        "strictFunctionTypes": false
+        "strictFunctionTypes": true
     },
     "files": [
         "index.d.ts",
