remove OpenContextData test as this extra file is not allowed by DefinitelyTyped.

--- a/types/wegame-api/tsconfig.json
+++ b/types/wegame-api/tsconfig.json
@@ -13,7 +13,6 @@
     },
     "files": [
         "index.d.ts",
-        "wegame-api-tests.ts",
-        "datacontext/index.ts"
+        "wegame-api-tests.ts"
     ]
 }
