add noEmit to tsconfig.json

--- a/types/wegame-api/tsconfig.json
+++ b/types/wegame-api/tsconfig.json
@@ -9,10 +9,12 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true
     },
     "files": [
         "index.d.ts",
-        "wegame-api-tests.ts"
+        "wegame-api-tests.ts",
+        "datacontext/index.ts"
     ]
 }
