fixed test errors

--- a/types/wegame-api/tsconfig.json
+++ b/types/wegame-api/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
+    	"baseUrl": "../",
+        "typeRoots": [
+            "../"
+        ],
+        "types": [],
         "module": "commonjs",
         "lib": [
             "es6",
@@ -14,7 +19,6 @@
     },
     "files": [
         "index.d.ts",
-        "wegame-api-tests.ts",
-        "datacontext/index.ts"
+        "wegame-api-tests.ts"
     ]
 }
