--- a/types/almost-equal/tsconfig.json
+++ b/types/almost-equal/tsconfig.json
@@ -11,6 +11,7 @@
         "typeRoots": [
             "../"
         ],
+        "strictFunctionTypes": true,
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
